# outbank_mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  outbank_export_example.csv  pyproject.toml
.claude/agent-memory/security-auditor/: MEMORY.md  findings.md
.github/: dependabot.yml
.github/workflows/: publish.yml
db/: schema.sql
docs/: fastmcp-v3-migration-guide.md  mcp.md  metabase.md  outbank-import.md  security.md  stack.md
openspec/: project.md
openspec/changes/add-docker-sandbox/: design.md  proposal.md  tasks.md
openspec/changes/add-finance-mcp-query/: design.md  proposal.md
openspec/changes/add-mcp-security-guidance/: tasks.md
openspec/changes/add-mcp-transport-tests/: proposal.md  tasks.md
openspec/changes/add-production-hardening/: design.md  (+2 more)
scripts/: generate-auth-token.py  query_groceries.py
scripts/mcp-tests/: 01_list_tools.sh  02_describe_fields.sh  03_search_basic.sh  04_search_advanced.sh  05_reload_transactions.sh  README.md
services/finance-mcp/: Dockerfile  app.py
src/mcp_outbank/: auth.py  exclusion_filters.py  server.py
tests/: MCP_COMPLIANCE.md  README.md  USER_WORKFLOW.md  __init__.py  conftest.py
tests/features/: account_reconciliation.feature  data_state.feature  http_auth.feature  invalid_inputs.feature  monthly_expense.feature  progressive_refinement.feature
tests/mcp/: __init__.py  conftest.py  test_advanced_queries.py  test_aggregate_transactions.py  test_error_handling.py  test_exclusion_filters.py  test_production_hardening.py  test_simple_queries.py  test_user_workflow.py
tests/step_defs/: conftest.py  test_account_reconciliation.py  test_data_state.py  test_http_auth.py  test_invalid_inputs.py  test_monthly_expense.py  test_progressive_refinement.py
(+45 files in other folders)
