[project]
name = "mcp-outbank"
version = "1.0.0"
description = "Local-first Outbank CSV MCP query service"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=3.0.0b1,<4.0.0",
  "python-dotenv",
  "rich>=13.0.0",
]

[dependency-groups]
dev = [
  "pytest>=7.0.0",
  "requests>=2.31.0",
  "pytest-bdd>=7.0.0",
  "pre-commit>=3.6.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
log_cli = false
log_file = "test-logs/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "-v --tb=short --capture=tee-sys"
bdd_features_base_dir = "tests/features"
markers = [
    "stdio: stdio transport tests",
    "http: HTTP transport tests",
    "http_only: HTTP transport only tests",
    "integration: integration workflow tests",
]
filterwarnings = [
    # gherkin-official 29.x has deprecation warning, pytest-bdd pins <30.0.0
    # See: https://github.com/pytest-dev/pytest-bdd/issues/779
    "ignore:'maxsplit' is passed as positional argument:DeprecationWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Skip assert warnings (used in tests)
